--- a/dot_config/yazi/keymap.toml
+++ b/dot_config/yazi/keymap.toml
@@ -1,16 +1,16 @@
-[[manager.prepend_keymap]]
+[[mgr.prepend_keymap]]
 on = ["E"]
 run = '''
     shell "$@" --block --confirm
 '''
 desc = "Execute"
 
-[[manager.prepend_keymap]]
+[[mgr.prepend_keymap]]
 on = "<C-r>"
 run = "refresh"
 desc = "Refresh"
 
-[[manager.prepend_keymap]]
+[[mgr.prepend_keymap]]
 on = ["<C-n>"]
 run = '''
 	shell 'dragon-drop -a -x "$@"' --confirm
