--- a/ground/pyproject.toml
+++ b/ground/pyproject.toml
@@ -15,5 +15,6 @@ dependencies = [
     "pingouin>=0.5.5",
     "psutil>=7.0.0",
     "python-dotenv>=1.1.1",
+    "python-rtmidi>=1.5.8",
     "seaborn>=0.13.2",
 ]
